_source/css/logz-docs.css
/* ... */
/* ===== PAGE LAYOUT ===== */

body {
  padding: 0;
  margin: 0 auto;
}

.test {
  color: red !important;
}

div.big-container {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: stretch;
  align-content: flex-start;
}

header {
  /* flex */
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;

  /* position & style */
  position: sticky;
  z-index: 100;
  top: 0px;
  width: auto;
  margin: 0 auto;
  padding: 0 50px;
  height: 45px;
  background-color: white;
  border-bottom: 1px solid var(--border-light);
}

footer {
  /* flex */
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-between;
  align-items: center;

  /* position & style */
  width: auto;
  margin: 0 auto;
  font-size: .9rem;
  border-top: 1px solid var(--border-light);
  padding: 10px 50px;
  height: 30px;
  line-height: 30px;
}

.title-container {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 1rem;
}

div.toc-container {
  align-self: stretch;
  background-color: var(--background-very-light);
  width: 300px;
  min-width: 300px;
}

div.body-container {
  max-width: 850px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 25px;
  padding-right: 25px;
  padding-bottom: 200px;
}

div.card-container {
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 50px;
}

div.body-container, div.card-container {
  vertical-align: top;
  margin-top: 2rem;
  justify-self: start;
}

/* media queries */

@media (max-width: 630px) {
  #log-in {
    display: none;
  }
}

@media (max-width: 975px) {
/* toc hides at this size */

  header, footer {
    padding: 0 10px;
  }

  div.site-badge {
    min-width: 145px !important;
  }

  div#toc-collapse-btn {
    display: inline-block !important;
  }

  .toc-visibility {
    display: none !important;
  }

  div.toc-container {
    position: fixed;
    width: 300px;
    display: block;
    top: 25px;
    left: 0;
    bottom: 0;
    overflow-y: auto;
    z-index: 50;
    }

  div.site-badge img.logz-logo {
    display: none;
  }

  div.site-badge img.logz-symbol {
    display: inline !important;
  }
}

@media (max-width: 1210px) {
  nav.site-links {
    display: none;
  }

  nav.site-actions {
    padding: 0;
  }
}

/* ===== CARDS ===== */

div.card-container a {
  margin: 12px;
}

div.cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}

div.card {
  border: 1px solid var(--border-light);
  border-radius: 6px;
  padding: 14px;
  margin: 0;
  width: 250px;
  text-align: center;

  box-shadow: none;
  transition: box-shadow 200ms;
}

div.card:hover {
  box-shadow: var(--card-shadow);
  transition: box-shadow 200ms;
}

div.full-card {
  height: 170px;
}

div.half-card {
  height: 50px;
  display: flex;
  align-items: center;
}

div.mini-card {
  padding: 0 5px;
  width: 150px;
  height: 160px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

div.mini-card.community-project-card {
  height: 180px;
  border: 1px solid rgb(var(--app-gray-primary))
}

div.full-card div.card-text {
  display: block;
  padding: 0;
}

.full-card .card-text p {
  line-height: 1.25em;
  margin-top: .75em;
}

span.card-title {
  font-family: var(--heading-font);
  font-weight: 600;
  color: var(--heading-normal);
  font-size: 1.25rem;
  margin: auto;
}

.mini-card .card-title {
  font-family: var(--body-font);
  line-height: 0px;
}

div.full-card span.card-title {
  margin-top: 14px;
}

div.card p {
  font-size: .9rem;
  line-height: 1.2rem;
  width: 85%;
  margin: auto;
  color: var(--text-normal);
}

div.card-icon {
  margin: 14px auto;
  padding: 0;
}

.mini-card .card-icon {
  margin: 5px auto;
  height: 65px;
  background-repeat: no-repeat;
  background-position: center center;
  width: 95%;
}

.mini-card .card-icon.horizontal {
  background-size: 100% auto;
}

.mini-card .card-icon.vertical {
  background-size: auto 100%;
}

div.card-icon i {
  width: 50;
  height: 50;
  vertical-align: middle;
}

div.card-icon i::before {
  color: var(--text-link);
  opacity: .5;
  font-size: 30px;
  padding: 0;
  margin: 0;
}

.mini-card.community-project-card::before {
  content: "Community project";

  background-color: rgb(var(--app-gray-primary));
  color: white;

  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  font-size: .9rem;
  font-weight: 400;

  margin: -11px -6px 0px -6px;
}

/* ===== BASE STYLES ===== */

html {
  font-size: 16px;
}

body, .ui-accordion-content > *:not(h5):not(h6)  {
  font-family: var(--body-font);
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.7rem;
  color: var(--text-normal);
}

p {
  margin-bottom: 1.25rem;
  margin-top: 1.25rem;
}

code, pre {
  font-family: var(--mono-font);
  font-size: .8rem;
}

h1, h2, h3, h4, h5, h6, .site-title, .post-title, .inline-header {
  font-weight: 400;
  padding: 0;
  color: var(--heading-normal);
  margin-top: 3rem;
  margin-bottom: 1rem;
}

h1, h1:first-child {
  font-family: var(--title-font);
  margin-top: 0px;
  margin-bottom: 0;
  margin-right: 1rem;
}

h2, h3, h4, h5, h6, .inline-header {
  font-family: var(--heading-font);
}

h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child, .inline-header:first-child {
  margin-top: 1rem;
}

h1, .post-title {
  font-size: 2rem;
  font-weight: 700;
}

h2 {
  font-size: 1.75rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

h5, h6, .inline-header {
  font-size: 1rem;
  font-weight: 700;
  margin-bottom: 0;
}

h5, h6 {
  text-transform: uppercase;
}

/* Use h6 to introduce procedures. If you need a regular heading, use h5 */
h6 {
  color: var(--tasklist-heading);
}
/* ... */

